--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,3 +1,7 @@
+require 'etc'
+total_cpus = Etc.nprocessors
+cpus_per_vm = (total_cpus / 3.0).ceil
+
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/focal64"
 
@@ -6,17 +10,18 @@ Vagrant.configure("2") do |config|
     server.vm.network "private_network", ip: "192.168.56.110"
 
     server.vm.provider "virtualbox" do |vb|
-      vb.memory = "1024"
-      vb.cpus = 1
+      vb.memory = "2048"
+      vb.cpus = cpus_per_vm
       vb.name = "bhamdiS"
     end
 
-    server.vm.synced_folder "/home/vagrant/p1", "/vagrant_data"
+    server.vm.synced_folder "/home/vagrant/p1", "/vagrant_data", SharedFoldersEnableSymlinksCreate: false
 
     server.vm.provision "shell", inline: <<-SHELL
+      export DEBIAN_FRONTEND=noninteractive
       sudo apt-get update
-      sudo apt-get upgrade -y
-      curl -sfL https://get.k3s.io | sh -s - server --disable traefik
+      # sudo apt-get upgrade -y -q
+      curl -sfL https://get.k3s.io | sh -s - server --disable traefik --node-ip 192.168.56.110
       sudo mkdir -p /home/vagrant/.kube
       sudo cp /etc/rancher/k3s/k3s.yaml /home/vagrant/.kube/config
       sudo chown -R vagrant:vagrant /home/vagrant/.kube
@@ -29,19 +34,20 @@ Vagrant.configure("2") do |config|
     worker.vm.network "private_network", ip: "192.168.56.111"
 
     worker.vm.provider "virtualbox" do |vb|
-      vb.memory = "1024"
-      vb.cpus = 1
+      vb.memory = "2048"
+      vb.cpus = cpus_per_vm
       vb.name = "bhamdiSW"
     end
 
     worker.vm.synced_folder "/home/vagrant/p1", "/vagrant_data"
 
     worker.vm.provision "shell", inline: <<-SHELL
+      export DEBIAN_FRONTEND=noninteractive
       sudo apt-get update
-      sudo apt-get upgrade -y
+      # sudo apt-get upgrade -y -q
       sudo apt-get install -y jq
       K3S_TOKEN=$(curl -sSL http://192.168.56.110:8080/node-token)
-      curl -sfL https://get.k3s.io | sh -s - agent --server https://192.168.56.110:6443 --token $K3S_TOKEN
+      curl -sfL https://get.k3s.io | sh -s - agent --server https://192.168.56.110:6443 --token $K3S_TOKEN --node-ip 192.168.56.111
       sudo snap install kubectl --classic
     SHELL
   end
