--- a/p2/scripts/app1.yml
+++ b/p2/scripts/app1.yml
@@ -1,7 +1,10 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app-one
+  labels:
+    app: app-one
 spec:
   replicas: 1
   selector:
@@ -14,20 +17,26 @@ spec:
     spec:
       containers:
       - name: app-one
-        image: nginxdemos/hello:0.2
+        image: paulbouwer/hello-kubernetes:1.10
+        imagePullPolicy: IfNotPresent
+        env: 
+        - name: MESSAGE
+          value: "Hello from app-one."
         ports:
         - containerPort: 80
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: app-one-service
-spec:
-  selector:
+  labels:
     app: app-one
+spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
+      targetPort: 8080
+  selector:
+    app: app-one
   type: ClusterIP
+---
