--- a/p2/scripts/app2.yml
+++ b/p2/scripts/app2.yml
@@ -1,7 +1,10 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app-two
+  labels:
+    app: app-two
 spec:
   replicas: 3
   selector:
@@ -14,20 +17,26 @@ spec:
     spec:
       containers:
       - name: app-two
-        image: tutum/hello-world
+        image: paulbouwer/hello-kubernetes:1.10
+        imagePullPolicy: IfNotPresent
+        env: 
+        - name: MESSAGE
+          value: "Hello from app-two."
         ports:
         - containerPort: 80
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: app-two-service
-spec:
-  selector:
+  labels:
     app: app-two
+spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
+      targetPort: 8080
+  selector:
+    app: app-two
   type: ClusterIP
+---
