--- a/p2/scripts/app3.yml
+++ b/p2/scripts/app3.yml
@@ -1,7 +1,10 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app-three
+  labels:
+    app: app-three
 spec:
   replicas: 1
   selector:
@@ -14,20 +17,24 @@ spec:
     spec:
       containers:
       - name: app-three
-        image: pierrezemb/gostatic
+        image: paulbouwer/hello-kubernetes:1.10
+        imagePullPolicy: IfNotPresent
+        env: 
+        - name: MESSAGE
+          value: "Hello from app-three."
         ports:
-        - containerPort: 8043
-
+        - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: app-three-service
 spec:
-  selector:
-    app: app-three
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8043
+      targetPort: 8080
+  selector:
+    app: app-three
   type: ClusterIP
+---
