modify cmdVagrant & Vagrantfile OK & p3 to check

--- a/p3/wil-deployment.yaml
+++ b/p3/wil-deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: will-playground
+  name: wil-playground
   namespace: dev
   labels:
-    app: will-playground
+    app: wil-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: will-playground
+      app: wil-app
   template:
     metadata:
       labels:
-        app: will-playground
+        app: wil-app
     spec:
       containers:
-        - name: playground
+        - name: app
           image: "wil42/playground:v1"
           ports:
             - containerPort: 8888
@@ -24,11 +24,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: will-playground-service
+  name: wil-app
   namespace: dev
 spec:
   selector:
-    app: will-playground
+    app: wil-app
   ports:
     - protocol: TCP
       port: 8888
