--- a/p3/deployment.yml
+++ b/p3/deployment.yml
@@ -1,17 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argocd
+  name: wil-playground-app
   namespace: argocd
 spec:
-  project: default
   destination:
     namespace: dev
     server: https://kubernetes.default.svc
+  project: default
   source:
-    repoURL: https://github.com/BenElhadj/Inception-of-Things-p3
-    path: .
-    targetRevision: main
+    repoURL: https://github.com/BenElhadj/Inception-of-Things-p3.0.git
+    targetRevision: master
+    path: kubernetes
+    directory:
+      recurse: true
   syncPolicy:
     automated:
       prune: true
