--- a/p3/deployment.yml
+++ b/p3/deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: iot-bhamdi
+  name: iot-votrlogin
   namespace: argocd
 spec:
   destination:
